examples/invalid/invalid_await.fg
fn main():
    await 42
